crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__nested_replacements.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->outer inner outer
<!-- REPLACEMENTS -->
<!-- SEARCH -->outer inner outer
<!-- REPLACE -->modified inner
<!-- SEARCH -->inner
<!-- REPLACE -->content
<!-- FINAL -->modified content
