crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__overlapping_matches.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->abcabcabc
<!-- REPLACEMENTS -->
<!-- SEARCH -->abca
<!-- REPLACE -->1234
<!-- SEARCH -->cabc
<!-- REPLACE -->5678
<!-- FINAL -->1234b5678
