crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__prefers_exact_matches_over_fuzzy.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo foox foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->bar
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- FINAL -->bar bazx foo
