crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__preserve_indentation.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->    indented
        more indented
<!-- REPLACEMENTS -->
<!-- SEARCH -->indented
<!-- REPLACE -->text
<!-- FINAL -->    text
        more indented
