crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__replaces_only_first_match.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo bar foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- FINAL -->baz bar foo
