crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__sequential_non_overlapping_replacements.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->abcdef
<!-- REPLACEMENTS -->
<!-- SEARCH -->abc
<!-- REPLACE -->123
<!-- SEARCH -->def
<!-- REPLACE -->456
<!-- FINAL -->123456
