crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__sequential_replacements_on_identical_text.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->same same same
<!-- REPLACEMENTS -->
<!-- SEARCH -->same
<!-- REPLACE -->different
<!-- SEARCH -->same
<!-- REPLACE -->changed
<!-- FINAL -->different changed same
