crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__tab_characters.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->no_tab	has_tab
<!-- REPLACEMENTS -->
<!-- SEARCH -->has_tab
<!-- REPLACE -->replaced
<!-- FINAL -->no_tab	replaced
