crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__unicode_characters.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->Hello 世界
<!-- REPLACEMENTS -->
<!-- SEARCH -->世界
<!-- REPLACE -->🌍
<!-- FINAL -->Hello 🌍
